Add Account, AccountNav, and Dashboard components
- Created Account component to serve as a container for AccountNav and Dashboard.
- Implemented AccountNav component with a logo, navigation links, and a logout button.
- Added Dashboard component as a placeholder for future content.

--- a/src/index.css
+++ b/src/index.css
@@ -110,7 +110,7 @@ html {
 .hero4 {
   background-image: linear-gradient(
       rgba(0, 94, 122, 0.7),
-      rgba(165, 159, 0, 0.589)
+      rgb(123, 120, 42)
     ),
     url("/src/assets/bacoor3.png");
   background-size: cover;
