--- a/src/AccountSettings.css
+++ b/src/AccountSettings.css
@@ -199,10 +199,14 @@
   color: white;
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05);
   appearance: none;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
   background-position: right 0.5rem center;
   background-repeat: no-repeat;
   background-size: 1.5em 1.5em;
+}
+
+.form-select option {
+  background-color: #2a3441;
+  color: white;
 }
 
 .form-select:focus {
@@ -213,6 +217,12 @@
 
 .form-select:hover {
   background-color: rgba(255, 255, 255, 0.15);
+}
+
+/* Add styles for dropdown options */
+.form-select option {
+  background-color: #2a3441;
+  color: white;
 }
 
 .birthday-grid {
